Implement UIApplication.simulatedPressure

--- a/Everestmeter.xcodeproj/xcshareddata/xcschemes/Everestmeter.xcscheme
+++ b/Everestmeter.xcodeproj/xcshareddata/xcschemes/Everestmeter.xcscheme
@@ -82,13 +82,12 @@
             ReferencedContainer = "container:Everestmeter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-         <CommandLineArgument
-            argument = "--demo-mode"
-            isEnabled = "YES">
-         </CommandLineArgument>
-      </CommandLineArguments>
       <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "SIMULATED_PRESSURE"
+            value = "80"
+            isEnabled = "YES">
+         </EnvironmentVariable>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
             value = "disable"
