Start and stop measuring pressure as needed (close #18)

--- a/Everestmeter.xcodeproj/xcshareddata/xcschemes/Everestmeter.xcscheme
+++ b/Everestmeter.xcodeproj/xcshareddata/xcschemes/Everestmeter.xcscheme
@@ -86,7 +86,7 @@
          <EnvironmentVariable
             key = "SIMULATED_PRESSURE"
             value = "100"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
